// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatMessage > renders with actions slot correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 w-full">Hello, how are you?</div>
      <div data-slot="chat-message-actions" class="[@media(hover:hover)]:opacity-0 group-hover/message:opacity-100 absolute bottom-0 flex items-center transition-opacity ease-out">Actions slot</div>
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with as correctly 1`] = `
"<section data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 w-full">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</section>"
`;

exports[`ChatMessage > renders with avatar correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <div data-slot="chat-message-leading" class="inline-flex items-center justify-center min-h-6"><span data-slot="chat-message-leadingAvatar" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-accent-soft [--ui-accent:var(--ui-neutral)] size-8 text-base shrink-0"><img src="https://github.com/benjamincanac.png" width="32" height="32" data-slot="avatar-image" class="h-full w-full rounded-[inherit] object-cover"></span></div>
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 w-full">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with class correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 w-full">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with compact correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-3">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-1.5 pb-3">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-2 w-full">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with content correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 w-full">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with content slot correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 w-full">Content slot</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with files slot correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <div data-slot="chat-message-header" class="flex mb-1.5">
    <div data-slot="chat-message-files" class="flex items-center gap-1.5">Files slot</div>
  </div>
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 w-full">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with header slot correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <div data-slot="chat-message-header" class="flex mb-1.5">Header slot</div>
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 w-full">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with icon correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <div data-slot="chat-message-leading" class="inline-flex items-center justify-center min-h-6"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="chat-message-leadingIcon" class="shrink-0 size-8"></svg></div>
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 w-full">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with leading slot correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <div data-slot="chat-message-leading" class="inline-flex items-center justify-center min-h-6">Leading slot</div>
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 w-full">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with neutral variant naked correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 w-full">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with neutral variant outline correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 bg-default ring ring-default px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with neutral variant soft correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 bg-elevated/50 px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with neutral variant solid correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 bg-inverted text-inverted px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with neutral variant subtle correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 bg-elevated/50 ring ring-default px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with parts correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 w-full">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with primary variant naked correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full [--ui-accent:var(--ui-primary)] scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 text-accent w-full">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with primary variant outline correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full [--ui-accent:var(--ui-primary)] scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 text-accent ring ring-accent-border-soft px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with primary variant soft correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full [--ui-accent:var(--ui-primary)] scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 bg-accent-soft text-accent-soft-foreground px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with primary variant solid correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full [--ui-accent:var(--ui-primary)] scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 bg-accent text-accent-foreground px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with primary variant subtle correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full [--ui-accent:var(--ui-primary)] scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 bg-accent-soft text-accent-soft-foreground ring ring-accent-border-soft px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with role assistant correctly 1`] = `
"<article data-role="assistant" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 w-full">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with side right correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start justify-end ms-auto max-w-[75%] gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with ui correctly 1`] = `
"<article data-role="user" data-slot="chat-message" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <!--v-if-->
  <div data-slot="chat-message-container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="chat-message-body" class="min-w-0 w-full">
      <div data-slot="chat-message-content" class="relative text-pretty wrap-break-word *:first:mt-0 *:last:mb-0 space-y-4 w-full">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </div>
</article>"
`;
